--- a/PenseBem/PenseBem/Views/Teclado.xaml
+++ b/PenseBem/PenseBem/Views/Teclado.xaml
@@ -2,21 +2,67 @@
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PenseBem.Views.Teclado">
-  <ContentView.Content>
+
+    <ContentView.Resources>
+        <ResourceDictionary>
+            <Style TargetType="Button" x:Key="styleBaseButton">
+                <Setter Property="TextColor" Value="White" />
+                <Setter Property="CornerRadius" Value="5" />
+                <Setter Property="FontAttributes" Value="Bold" />
+                <Setter Property="FontSize" Value="Medium" />
+            </Style>
+
+            <Style TargetType="Button" x:Key="styleButtonLetras" BasedOn="{StaticResource styleBaseButton}">
+                <Setter Property="BorderColor" Value="White" />
+                <Setter Property="BorderWidth" Value="2" />
+            </Style>
+
+            <Style TargetType="Button" x:Key="styleButtonOperacoes" BasedOn="{StaticResource styleBaseButton}">
+                <Setter Property="BackgroundColor" Value="Blue" />
+            </Style>
+
+            <Style TargetType="Button" x:Key="styleButtonNumeros" BasedOn="{StaticResource styleBaseButton}">
+                <Setter Property="TextColor" Value="Blue" />
+                <Setter Property="FontSize" Value="Small" />
+                <Setter Property="BackgroundColor" Value="White" />
+                <Setter Property="Padding" Value="0" />
+            </Style>
+
+            <Style TargetType="Button" x:Key="styleButtonNotasMusicais" BasedOn="{StaticResource styleBaseButton}">
+                <Setter Property="TextColor" Value="White" />
+                <Setter Property="FontSize" Value="Small" />
+                <Setter Property="BackgroundColor" Value="Red" />
+                <Setter Property="Padding" Value="0" />
+            </Style>
+
+            <Style TargetType="Button" x:Key="styleButtonJogos" BasedOn="{StaticResource styleBaseButton}">
+                <Setter Property="TextColor" Value="Green" />
+                <Setter Property="FontSize" Value="9" />
+                <Setter Property="FontAttributes" Value="None" />
+                <Setter Property="BackgroundColor" Value="Yellow" />
+                <Setter Property="Padding" Value="0" />
+                <Setter Property="Margin" Value="0,5,0,0" />
+            </Style>
+        </ResourceDictionary>
+    </ContentView.Resources>
+
+    <ContentView.Content>
         <Frame BackgroundColor="DarkGray"
                CornerRadius="5" 
                Padding="5">
 
-            <Grid><!--Teclado-->
+            <Grid>
+                <!--Teclado-->
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
                     <RowDefinition Height="*" />
                     <!--<RowDefinition Height="*" />-->
                 </Grid.RowDefinitions>
 
-                <Grid Grid.Row="0"><!--Letras/Funções/Operações Matematicas-->
+                <Grid Grid.Row="0">
+                    <!--Letras/Funções/Operações Matematicas-->
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />                        
+                        <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
 
                     <Grid.ColumnDefinitions>
@@ -24,7 +70,8 @@
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
 
-                    <Grid Grid.Row="0" Grid.Column="0"><!--Letras-->
+                    <Grid Grid.Row="0" Grid.Column="0">
+                        <!--Letras-->
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*" />
                         </Grid.RowDefinitions>
@@ -36,23 +83,33 @@
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
 
-                        <Button Text="A" 
-                                TextColor="White" 
-                                FontAttributes="Bold" 
-                                FontSize="Medium" 
-                                BackgroundColor="Red" 
-                                CornerRadius="5" 
-                                BorderColor="White" 
-                                BorderWidth="2" 
+                        <Button Style="{StaticResource styleButtonLetras}"
+                                Text="A"                                 
+                                BackgroundColor="Red"
                                 Grid.Row="0" 
                                 Grid.Column="0" />
-                        
-                        <Button Text="B" TextColor="White" FontAttributes="Bold" FontSize="Medium" BackgroundColor="Yellow" CornerRadius="5" BorderColor="White" BorderWidth="2" Grid.Row="0" Grid.Column="1" />
-                        <Button Text="C" TextColor="White" FontAttributes="Bold" FontSize="Medium" BackgroundColor="Blue" CornerRadius="5" BorderColor="White" BorderWidth="2" Grid.Row="0" Grid.Column="2" />
-                        <Button Text="D" TextColor="White" FontAttributes="Bold" FontSize="Medium" BackgroundColor="Green" CornerRadius="5" BorderColor="White" BorderWidth="2" Grid.Row="0" Grid.Column="3" />                        
+
+                        <Button Style="{StaticResource styleButtonLetras}"
+                                Text="B"
+                                BackgroundColor="Yellow"
+                                Grid.Row="0"
+                                Grid.Column="1" />
+
+                        <Button Style="{StaticResource styleButtonLetras}" 
+                                Text="C" 
+                                BackgroundColor="Blue"
+                                Grid.Row="0"
+                                Grid.Column="2" />
+
+                        <Button Style="{StaticResource styleButtonLetras}"
+                                Text="D"
+                                BackgroundColor="Green"
+                                Grid.Row="0"
+                                Grid.Column="3" />
                     </Grid>
 
-                    <Grid Grid.Row="0" Grid.Column="1"><!--Funções/Operações Matematicas-->
+                    <Grid Grid.Row="0" Grid.Column="1">
+                        <!--Funções/Operações Matematicas-->
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*" />
                             <RowDefinition Height="*" />
@@ -66,20 +123,59 @@
                         </Grid.ColumnDefinitions>
 
                         <!--Funções-->
-                        <Button Text="ENTER" TextColor="Blue" BackgroundColor="White" CornerRadius="5" Grid.Row="0" Grid.Column="0" />
-                        <Button Text="LIVRO" TextColor="Blue" BackgroundColor="White" CornerRadius="5" Grid.Row="0" Grid.Column="1" />
-                        <Button Text="DESL." TextColor="White" BackgroundColor="Red" CornerRadius="5" Grid.Row="0" Grid.Column="2" />
-                        <Button Text="LIGA" TextColor="White" BackgroundColor="Green" CornerRadius="5" Grid.Row="0" Grid.Column="3" />
+                        <Button Text="ENTER"
+                                TextColor="Blue"
+                                BackgroundColor="White"
+                                CornerRadius="5"
+                                Grid.Row="0"
+                                Grid.Column="0" />
+
+                        <Button Text="LIVRO"
+                                TextColor="Blue"
+                                BackgroundColor="White"
+                                CornerRadius="5"
+                                Grid.Row="0"
+                                Grid.Column="1" />
+                        
+                        <Button Text="DESL."
+                                TextColor="White"
+                                BackgroundColor="Red"
+                                CornerRadius="5"
+                                Grid.Row="0"
+                                Grid.Column="2" />
+                        
+                        <Button Text="LIGA"
+                                TextColor="White"
+                                BackgroundColor="Green"
+                                CornerRadius="5"
+                                Grid.Row="0"
+                                Grid.Column="3" />
 
                         <!--Operações Matematicas-->
-                        <Button Text="-" TextColor="White" FontAttributes="Bold" FontSize="Medium" BackgroundColor="Blue" CornerRadius="5" Grid.Row="1" Grid.Column="1" />
-                        <Button Text="X" TextColor="White" FontAttributes="Bold" FontSize="Medium" BackgroundColor="Blue" CornerRadius="5" Grid.Row="1" Grid.Column="2" />
-                        <Button Text="+" TextColor="White" FontAttributes="Bold" FontSize="Medium" BackgroundColor="Blue" CornerRadius="5" Grid.Row="1" Grid.Column="0" />
-                        <Button Text="/" TextColor="White" FontAttributes="Bold" FontSize="Medium" BackgroundColor="Blue" CornerRadius="5" Grid.Row="1" Grid.Column="3" />
+                        <Button Style="{StaticResource styleButtonOperacoes}"
+                                Text="-"
+                                Grid.Row="1"
+                                Grid.Column="1" />
+                        
+                        <Button Style="{StaticResource styleButtonOperacoes}" 
+                                Text="X"
+                                Grid.Row="1"
+                                Grid.Column="2" />
+
+                        <Button Style="{StaticResource styleButtonOperacoes}"
+                                Text="+"
+                                Grid.Row="1"
+                                Grid.Column="0" />
+
+                        <Button Style="{StaticResource styleButtonOperacoes}"
+                                Text="/"
+                                Grid.Row="1"
+                                Grid.Column="3" />
                     </Grid>
                 </Grid>
 
-                <Grid Grid.Row="1" RowSpacing="0"><!--Números/Notas Musicais/Jogos-->
+                <Grid Grid.Row="1" RowSpacing="0">
+                    <!--Números/Notas Musicais/Jogos-->
                     <Grid.RowDefinitions>
                         <RowDefinition Height="30" />
                         <RowDefinition Height="30" />
@@ -100,42 +196,42 @@
                     </Grid.ColumnDefinitions>
 
                     <!--Números-->
-                    <Button Text="1" TextColor="Blue" FontSize="Small" FontAttributes="Bold" BackgroundColor="White" CornerRadius="5" Padding="0" Grid.Row="0" Grid.Column="0" />
-                    <Button Text="3" TextColor="Blue" FontSize="Small" FontAttributes="Bold" BackgroundColor="White" CornerRadius="5" Padding="0" Grid.Row="0" Grid.Column="2" />
-                    <Button Text="4" TextColor="Blue" FontSize="Small" FontAttributes="Bold" BackgroundColor="White" CornerRadius="5" Padding="0" Grid.Row="0" Grid.Column="3" />
-                    <Button Text="5" TextColor="Blue" FontSize="Small" FontAttributes="Bold" BackgroundColor="White" CornerRadius="5" Padding="0" Grid.Row="0" Grid.Column="4" />
-                    <Button Text="6" TextColor="Blue" FontSize="Small" FontAttributes="Bold" BackgroundColor="White" CornerRadius="5" Padding="0" Grid.Row="0" Grid.Column="5" />
-                    <Button Text="7" TextColor="Blue" FontSize="Small" FontAttributes="Bold" BackgroundColor="White" CornerRadius="5" Padding="0" Grid.Row="0" Grid.Column="6" />
-                    <Button Text="2" TextColor="Blue" FontSize="Small" FontAttributes="Bold" BackgroundColor="White" CornerRadius="5" Padding="0" Grid.Row="0" Grid.Column="1" />
-                    <Button Text="8" TextColor="Blue" FontSize="Small" FontAttributes="Bold" BackgroundColor="White" CornerRadius="5" Padding="0" Grid.Row="0" Grid.Column="7" />
-                    <Button Text="9" TextColor="Blue" FontSize="Small" FontAttributes="Bold" BackgroundColor="White" CornerRadius="5" Padding="0" Grid.Row="0" Grid.Column="8" />
-                    <Button Text="0" TextColor="Blue" FontSize="Small" FontAttributes="Bold" BackgroundColor="White" CornerRadius="5" Padding="0" Grid.Row="0" Grid.Column="9" />
+                    <Button Style="{StaticResource styleButtonNumeros}" Text="0" Grid.Row="0" Grid.Column="0" />
+                    <Button Style="{StaticResource styleButtonNumeros}" Text="1" Grid.Row="0" Grid.Column="1" />                    
+                    <Button Style="{StaticResource styleButtonNumeros}" Text="2" Grid.Row="0" Grid.Column="2" />                    
+                    <Button Style="{StaticResource styleButtonNumeros}" Text="3" Grid.Row="0" Grid.Column="3" />                    
+                    <Button Style="{StaticResource styleButtonNumeros}" Text="4" Grid.Row="0" Grid.Column="4" />                    
+                    <Button Style="{StaticResource styleButtonNumeros}" Text="5" Grid.Row="0" Grid.Column="5" />                    
+                    <Button Style="{StaticResource styleButtonNumeros}" Text="6" Grid.Row="0" Grid.Column="6" />                    
+                    <Button Style="{StaticResource styleButtonNumeros}" Text="7" Grid.Row="0" Grid.Column="7" />                    
+                    <Button Style="{StaticResource styleButtonNumeros}" Text="8" Grid.Row="0" Grid.Column="8" />                    
+                    <Button Style="{StaticResource styleButtonNumeros}" Text="9" Grid.Row="0" Grid.Column="9" />
 
                     <!--Notas Musicais-->
-                    <Button Text="PAUSA" TextColor="White" BackgroundColor="Red" CornerRadius="5" Padding="0" Grid.Row="1" Grid.Column="0" />
-                    <Button Text="DO" TextColor="White" BackgroundColor="Red" CornerRadius="5" Padding="0" Grid.Row="1" Grid.Column="1" />
-                    <Button Text="RE" TextColor="White" BackgroundColor="Red" CornerRadius="5" Padding="0" Grid.Row="1" Grid.Column="2" />
-                    <Button Text="MI" TextColor="White" BackgroundColor="Red" CornerRadius="5" Padding="0" Grid.Row="1" Grid.Column="3" />
-                    <Button Text="FA" TextColor="White" BackgroundColor="Red" CornerRadius="5" Padding="0" Grid.Row="1" Grid.Column="4" />
-                    <Button Text="SOL" TextColor="White" BackgroundColor="Red" CornerRadius="5" Padding="0" Grid.Row="1" Grid.Column="5" />
-                    <Button Text="LA" TextColor="White" BackgroundColor="Red" CornerRadius="5" Padding="0" Grid.Row="1" Grid.Column="6" />
-                    <Button Text="SI" TextColor="White" BackgroundColor="Red" CornerRadius="5" Padding="0" Grid.Row="1" Grid.Column="7" />
-                    <Button Text="DO" TextColor="White" BackgroundColor="Red" CornerRadius="5" Padding="0" Grid.Row="1" Grid.Column="8" />
-                    <Button Text="RE" TextColor="White" BackgroundColor="Red" CornerRadius="5" Padding="0" Grid.Row="1" Grid.Column="9" />
+                    <Button Style="{StaticResource styleButtonNotasMusicais}" Text="PAUSA" Grid.Row="1" Grid.Column="0" />
+                    <Button Style="{StaticResource styleButtonNotasMusicais}" Text="DO" Grid.Row="1" Grid.Column="1" />
+                    <Button Style="{StaticResource styleButtonNotasMusicais}" Text="RE" Grid.Row="1" Grid.Column="2" />
+                    <Button Style="{StaticResource styleButtonNotasMusicais}" Text="MI" Grid.Row="1" Grid.Column="3" />
+                    <Button Style="{StaticResource styleButtonNotasMusicais}" Text="FA" Grid.Row="1" Grid.Column="4" />
+                    <Button Style="{StaticResource styleButtonNotasMusicais}" Text="SOL" Grid.Row="1" Grid.Column="5" />
+                    <Button Style="{StaticResource styleButtonNotasMusicais}" Text="LA" Grid.Row="1" Grid.Column="6" />
+                    <Button Style="{StaticResource styleButtonNotasMusicais}" Text="SI" Grid.Row="1" Grid.Column="7" />
+                    <Button Style="{StaticResource styleButtonNotasMusicais}" Text="DO" Grid.Row="1" Grid.Column="8" />
+                    <Button Style="{StaticResource styleButtonNotasMusicais}" Text="RE" Grid.Row="1" Grid.Column="9" />
 
-                    <!--Notas Musicais-->
-                    <Button Text="ADIÇÃO" TextColor="Green" FontSize="9" BackgroundColor="Yellow" CornerRadius="5" Padding="0" Margin="0,5,0,0" Grid.Row="2" Grid.Column="0" />
-                    <Button Text="SUBTRAÇÃO" TextColor="Green" FontSize="9" BackgroundColor="Yellow" CornerRadius="5" Padding="0" Margin="0,5,0,0" Grid.Row="2" Grid.Column="1" />
-                    <Button Text="MULTIPLICAÇÃO" TextColor="Green" FontSize="9" BackgroundColor="Yellow" CornerRadius="5" Padding="0" Margin="0,5,0,0" Grid.Row="2" Grid.Column="2" />
-                    <Button Text="DIVISÃO" TextColor="Green" FontSize="9" BackgroundColor="Yellow" CornerRadius="5" Padding="0" Margin="0,5,0,0" Grid.Row="2" Grid.Column="3" />
-                    <Button Text="ARITMÉTICA" TextColor="Green" FontSize="9" BackgroundColor="Yellow" CornerRadius="5" Padding="0" Margin="0,5,0,0" Grid.Row="2" Grid.Column="4" />
-                    <Button Text="OPERAÇÃO" TextColor="Green" FontSize="9" BackgroundColor="Yellow" CornerRadius="5" Padding="0" Margin="0,5,0,0" Grid.Row="2" Grid.Column="5" />
-                    <Button Text="SIGA-ME" TextColor="Green" FontSize="9" BackgroundColor="Yellow" CornerRadius="5" Padding="0" Margin="0,5,0,0" Grid.Row="2" Grid.Column="6" />
-                    <Button Text="MEMÓRIA TONS" TextColor="Green" FontSize="9" BackgroundColor="Yellow" CornerRadius="5" Padding="0" Margin="0,5,0,0" Grid.Row="2" Grid.Column="7" />
-                    <Button Text="NÚMERO DO MEIO" TextColor="Green" FontSize="9" BackgroundColor="Yellow" CornerRadius="5" Padding="0" Margin="0,5,0,0" Grid.Row="2" Grid.Column="8" />
-                    <Button Text="ADIVINHE O NÚMERO" TextColor="Green" FontSize="9" BackgroundColor="Yellow" CornerRadius="5" Padding="0" Margin="0,5,0,0" Grid.Row="2" Grid.Column="9" />
-                </Grid>                
+                    <!--Jogos-->
+                    <Button Style="{StaticResource styleButtonJogos}" Text="ADIÇÃO" Grid.Row="2" Grid.Column="0" />
+                    <Button Style="{StaticResource styleButtonJogos}" Text="SUBTRAÇÃO" Grid.Row="2" Grid.Column="1" />
+                    <Button Style="{StaticResource styleButtonJogos}" Text="MULTIPLICAÇÃO" Grid.Row="2" Grid.Column="2" />
+                    <Button Style="{StaticResource styleButtonJogos}" Text="DIVISÃO" Grid.Row="2" Grid.Column="3" />
+                    <Button Style="{StaticResource styleButtonJogos}" Text="ARITMÉTICA" Grid.Row="2" Grid.Column="4" />
+                    <Button Style="{StaticResource styleButtonJogos}" Text="OPERAÇÃO" Grid.Row="2" Grid.Column="5" />
+                    <Button Style="{StaticResource styleButtonJogos}" Text="SIGA-ME" Grid.Row="2" Grid.Column="6" />
+                    <Button Style="{StaticResource styleButtonJogos}" Text="MEMÓRIA TONS" Grid.Row="2" Grid.Column="7" />
+                    <Button Style="{StaticResource styleButtonJogos}" Text="NÚMERO DO MEIO" Grid.Row="2" Grid.Column="8" />
+                    <Button Style="{StaticResource styleButtonJogos}" Text="ADIVINHE O NÚMERO" Grid.Row="2" Grid.Column="9" />
+                </Grid>
             </Grid>
         </Frame>
-  </ContentView.Content>
+    </ContentView.Content>
 </ContentView>
