--- a/PenseBem/PenseBem/Views/Visor.xaml
+++ b/PenseBem/PenseBem/Views/Visor.xaml
@@ -3,11 +3,21 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PenseBem.Views.Visor">
 
+    <ContentView.Resources>
+        <ResourceDictionary>
+            <Style TargetType="Label" x:Key="styleLabel">
+                <Setter Property="TextColor" Value="#4A382E" />
+                <Setter Property="FontSize" Value="60" />
+                <Setter Property="HorizontalTextAlignment" Value="Center" />
+                <Setter Property="BackgroundColor" Value="Black" />
+            </Style>
+        </ResourceDictionary>
+    </ContentView.Resources>
+    
     <ContentView.Content>
         <Grid ColumnSpacing="0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
-                <!--<RowDefinition Height="*" />-->
             </Grid.RowDefinitions>
 
             <Grid.ColumnDefinitions>
@@ -20,80 +30,17 @@
                 <ColumnDefinition Width="45" />
                 <ColumnDefinition Width="45" />
                 <ColumnDefinition Width="45" />
-                <!--<ColumnDefinition Width="*" />-->
             </Grid.ColumnDefinitions>
 
-            <Label Text="8" 
-                   TextColor="#4A382E" 
-                   FontSize="60"
-                   HorizontalTextAlignment="Center"
-                   BackgroundColor="Black"
-                   Grid.Row="0" 
-                   Grid.Column="0" />
-
-            <Label Text="8" 
-                   TextColor="#4A382E" 
-                   FontSize="60"
-                   HorizontalTextAlignment="Center"
-                   BackgroundColor="Black"
-                   Grid.Row="0" 
-                   Grid.Column="1" />
-
-            <Label Text="-" 
-                   TextColor="#4A382E" 
-                   FontSize="60"
-                   HorizontalTextAlignment="Center"
-                   BackgroundColor="Black"
-                   Grid.Row="0" 
-                   Grid.Column="2" />
-
-            <Label Text="*" 
-                   TextColor="#4A382E" 
-                   FontSize="60"
-                   HorizontalTextAlignment="Center"
-                   BackgroundColor="Black"
-                   Grid.Row="0" 
-                   Grid.Column="3" />
-
-            <Label Text="8" 
-                   TextColor="#4A382E" 
-                   FontSize="60"
-                   HorizontalTextAlignment="Center"
-                   BackgroundColor="Black"
-                   Grid.Row="0" 
-                   Grid.Column="4" />
-
-            <Label Text="=" 
-                   TextColor="#4A382E" 
-                   FontSize="60"
-                   HorizontalTextAlignment="Center"
-                   BackgroundColor="Black"
-                   Grid.Row="0" 
-                   Grid.Column="5" />
-
-            <Label Text="8" 
-                   TextColor="#4A382E" 
-                   FontSize="60"
-                   HorizontalTextAlignment="Center"
-                   BackgroundColor="Black"
-                   Grid.Row="0" 
-                   Grid.Column="6" />
-
-            <Label Text="8" 
-                   TextColor="#4A382E" 
-                   FontSize="60"
-                   HorizontalTextAlignment="Center"
-                   BackgroundColor="Black"
-                   Grid.Row="0" 
-                   Grid.Column="7" />
-
-            <Label Text="8" 
-                   TextColor="#4A382E" 
-                   FontSize="60"
-                   HorizontalTextAlignment="Center"
-                   BackgroundColor="Black"
-                   Grid.Row="0" 
-                   Grid.Column="8" />
+            <Label Style="{StaticResource styleLabel}" Text="8" Grid.Row="0" Grid.Column="0" />
+            <Label Style="{StaticResource styleLabel}" Text="8" Grid.Row="0" Grid.Column="1" />
+            <Label Style="{StaticResource styleLabel}" Text="-" Grid.Row="0" Grid.Column="2" />
+            <Label Style="{StaticResource styleLabel}" Text="*" Grid.Row="0" Grid.Column="3" />
+            <Label Style="{StaticResource styleLabel}" Text="8" Grid.Row="0" Grid.Column="4" />
+            <Label Style="{StaticResource styleLabel}" Text="=" Grid.Row="0" Grid.Column="5" />
+            <Label Style="{StaticResource styleLabel}" Text="8" Grid.Row="0" Grid.Column="6" />
+            <Label Style="{StaticResource styleLabel}" Text="8" Grid.Row="0" Grid.Column="7" />
+            <Label Style="{StaticResource styleLabel}" Text="8" Grid.Row="0" Grid.Column="8" />
         </Grid>
     </ContentView.Content>
 </ContentView>
